unpackaged/main/default/objects/Asset_Builder_Approval__c/Asset_Builder_Approval__c.object-meta.xml
<CustomObject>
    <label>Asset Builder Approval</label>
    <nameField>
        <label>Asset Builder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Builder Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>