unpackaged/main/default/objects/Asset_Builder_Approval__c/fields/Account_Plant__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plant</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>Asset Builder Approvals</relationshipLabel>
    <relationshipName>Asset_Builder_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>