unpackaged/main/default/objects/Asset_Builder_Approval__c/fields/Customer_Contact_for_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_for_Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact for Onboarding</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asset Builder Approvals (Customer Contact for Onboarding)</relationshipLabel>
    <relationshipName>Asset_Builder_Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>