unpackaged/main/default/objects/Asset_Builder_Approval__c/fields/Is_Too_Be_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Too_Be_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Too Be Submitted</label>
    <type>Checkbox</type>
</CustomField>