unpackaged/main/default/objects/Asset_Builder_Approval__c/fields/Partner_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asset Builder Approvals</relationshipLabel>
    <relationshipName>Asset_Builder_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>