unpackaged/main/default/objects/Asset_Builder_Approval__c/listViews/All_PF_Community_Users_Queue_ABA_Asset_Builder_Approval.listView-meta.xml
<ListView>
    <fullName>All_PF_Community_Users_Queue_ABA_Asset_Builder_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>All PF Community Users - Queue ABA</label>
    <queue>All_PF_Community_Users_Queue_ABA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>